<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#B22222"
    tools:context=".BenefitForAdonor">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="132dp"
            android:layout_marginTop="26dp"
            android:src="@drawable/life_savers" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="140dp"
        android:background="#B22222"
        android:text="@string/free_ride_for_donate_blood"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

        <ImageButton
            android:id="@+id/pathaoBtn"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="181dp"
            android:layout_marginEnd="279dp"
            android:background="@drawable/pathao"
            android:contentDescription="@string/pathao_app_icon" />

        <ImageButton
            android:id="@+id/uberBtn"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="195dp"
            android:background="@drawable/uber"
            android:contentDescription="@string/uber_app_icon" />

        <ImageButton
            android:id="@+id/shohozBtn"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="182dp"
            android:layout_marginEnd="121dp"
            android:background="@drawable/shohoz_rides"
            android:contentDescription="@string/shohoz_app_icon" />

        <ImageButton
            android:id="@+id/obhaiBtn"
            android:layout_width="63dp"
            android:layout_height="43dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/obhai"
            android:contentDescription="@string/obhai_app_icon" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pathaoBtn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/before_blood_donate"
            android:textSize="15sp"
            android:textColor="#ffffff"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/after_blood_donate"
        android:layout_below="@id/textView1"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/benefit"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textColor="#ffffff"/>


</RelativeLayout>
</ScrollView>
