<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeAdonor"
    android:paddingTop="15dp"
    android:background="#800000"
    android:weightSum="10">

    <EditText
        android:id="@+id/donorName"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/enter_your_name"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/donorPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/enter_your_phone_number"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_your_blood_group"
        android:textSize="23sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donorPhoneNumber"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/bloodGoupRadioBtn"
        android:layout_width="327dp"
        android:layout_height="284dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/aplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bloodSelection"
            android:text="@string/a"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/aminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bloodSelection"
            android:text="@string/a_a"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/bplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bloodSelection"
            android:text="@string/b"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/bminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bloodSelection"
            android:text="@string/b_b"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/oplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bloodSelection"
            android:text="@string/o"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/ominus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bloodSelection"
            android:text="@string/o_o"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/abplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="bloodSelection"
            android:text="@string/ab"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/abminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/bloodGoupRadioBtn"
            android:onClick="bloodSelection"
            android:text="@string/a_b"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RadioGroup>


    <Button
        android:id="@+id/locationSelectBtn"
        android:layout_width="145dp"
        android:layout_height="58dp"
        android:layout_alignTop="@+id/done_btn"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/buttonshape"
        android:onClick="locationBtn"
        android:padding="5dp"
        android:text="@string/select_your_location_alertbtn"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/done_btn"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bloodGoupRadioBtn"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/done_btn"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A81E3E"
        android:shadowDx="1"
        android:shadowDy="0"
        android:shadowRadius="15"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bloodGoupRadioBtn"
        app:layout_constraintVertical_bias="0.8" />

</android.support.constraint.ConstraintLayout>
