<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:layout_marginBottom="5dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="8dp"
        android:weightSum="4"
        android:orientation="vertical"
        android:background="#800000">

        <TextView
            android:id="@+id/findBloodDonorNmae"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/md_muktadir"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/findBloodDonorBloodGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/blood_group"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/findBloodDonorLocation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/location"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/findBloodDonorPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:textColor="#000000"/>

            <ImageButton
                android:id="@+id/phoneCallBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/phone"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/image_icon"
                android:contextClickable="true"/>
        </LinearLayout>



    </LinearLayout>


</android.support.v7.widget.CardView>