<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#a52a2a"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:id="@+id/hospitalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textSize="15sp"
        android:text="@string/hospital_name"
        android:textColor="#000000"
        android:textStyle="bold"
        android:paddingEnd="5dp"/>

    <TextView
        android:id="@+id/hospitalPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hospitalName"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:text="@string/hospital_phone_number"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/callTohospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="46dp"
        android:background="@drawable/phone"
        android:contentDescription="@string/phone_icon_for_hospital"
        android:padding="10dp"
        android:paddingTop="20dp" />


</RelativeLayout>